# memory-monitor

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  deploy.yaml  release.yaml
src/: config.rs  detection.rs  heap_dump.rs  history.rs  main.rs  process.rs  s3.rs  slack.rs
